--- a/html/contact.html
+++ b/html/contact.html
@@ -17,11 +17,11 @@
             <span>iEducate</span>
 
             <ul>
-                <li><a href="/html/index.htm">Home</a></li>
-                <li><a href="/html/blogpost1.html">Blog</a></li>
+                <li><a href="../html/index.htm">Home</a></li>
+                <li><a href=../html/blogpost1.html">Blog</a></li>
                 <!-- <li><a href="login.html">Create</li> -->
-                <li><a href="/html/contact.html">Contact</a></li>
-                <li><a href="/html/login.html">Login/signup</a></li>
+                <li><a href="../html/contact.html">Contact</a></li>
+                <li><a href="../html/login.html">Login/signup</a></li>
             </ul>
         </div>
         <div class="nav-right">
@@ -44,11 +44,11 @@
                         <p>Cherry Drive Uniondale, NY 11553</p>
                     </div>
                     <div class="information">
-                        <img src="/image/email.png" class="icon" alt="">
+                        <img src="../image/email.png" class="icon" alt="">
                         <p>lorem@ieducate.in</p>
                     </div>
                     <div class="information">
-                        <img src="/image/contact.png" class="icon" alt="">
+                        <img src="../image/contact.png" class="icon" alt="">
                         <p>+91 8736977258</p>
                     </div>
                 </div>
