--- a/html/create.html
+++ b/html/create.html
@@ -6,10 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Page</title>
-    <link rel="stylesheet" href="/css/create.css">
-    <link rel="stylesheet" href="/css/util.css">
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="/css/mobile.css">
+    <link rel="stylesheet" href="../css/create.css">
+    <link rel="stylesheet" href="../css/util.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/mobile.css">
 
 </head>
 
@@ -19,15 +19,15 @@
             <span>iEducate</span>
 
             <ul>
-                <li><a href="/html/index.htm">Home</a></li>
-                <li><a href="/html/blogpost1.html">Blog</a></li>
+                <li><a href="../html/index.htm">Home</a></li>
+                <li><a href="../html/blogpost1.html">Blog</a></li>
                 <!-- <li><a href="login.html">Create</li> -->
-                <li><a href="/html/contact.html">Contact</a></li>
-                <li><a href="/html/login.html">Login/signup</a></li>
+                <li><a href="../html/contact.html">Contact</a></li>
+                <li><a href="../html/login.html">Login/signup</a></li>
             </ul>
         </div>
         <div class="nav-right">
-            <form action="/html/search1.html" method="get">
+            <form action="../html/search1.html" method="get">
                 <input class="form-input" type="text" placeholder="Article Search">
                 <button class="btn">Search</button>
             </form>
@@ -65,7 +65,7 @@
         <a href="#foot">Vector Credits : Vecteezy</a>
     </div>
 
-    <script src="/js/contact.js"></script>
+    <script src="../js/contact.js"></script>
 </body>
 
 </html>
