--- a/html/index.htm
+++ b/html/index.htm
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="/css/util.css">
-    <link rel="stylesheet" href="/css/mobile.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/util.css">
+    <link rel="stylesheet" href="../css/mobile.css">
     <title>Blogging site</title>
 </head>
 
@@ -18,15 +18,15 @@
             <!-- <img src="image/stock.jpg"> -->
 
             <ul>
-                <li><a href="/html/index.htm">Home</a></li>
-                <li><a href="/html/blogpost1.html">Blog</a></li>
+                <li><a href="../html/index.htm">Home</a></li>
+                <li><a href="../html/blogpost1.html">Blog</a></li>
                 <!-- <li><a href="login.html">Create</li> -->
-                <li><a href="/html/contact.html">Contact</a></li>
-                <li><a href="/html/login.html">Login/signup</a></li>
+                <li><a href="../html/contact.html">Contact</a></li>
+                <li><a href="../html/login.html">Login/signup</a></li>
             </ul>
         </div>
         <div class="nav-right">
-            <form action="/html/search1.html" method="get">
+            <form action="../html/search1.html" method="get">
                 <input class="form-input" type="text" placeholder="Article Search">
                 <button class="btn">Search</button>
             </form>
@@ -48,7 +48,7 @@
 
         </div>
         <div class="content-right">
-            <img src="/image/typing.jpg" alt="iEducate">
+            <img src="../image/typing.jpg" alt="iEducate">
         </div>
     </div>
     <div class="max-width-1 m-auto">
@@ -69,11 +69,11 @@
         <h2>Featured Articles</h2>
         <div class="home-article">
             <div class="home-article-img">
-                <img src="/image/BUTTERFLY.JPG" alt="article">
+                <img src="../image/BUTTERFLY.JPG" alt="article">
             </div>
             <div class="home-article-content font1">
                 <span>Science</span>
-                <a href="/html/blogpost1.html">
+                <a href="../html/blogpost1.html">
                     <h3>Butterflies and their magical journey.</h3>
                 </a>
                 <div>Author Name</div>
@@ -82,11 +82,11 @@
         </div>
         <div class="home-article">
             <div class="home-article-img">
-                <img src="/image/tree.JPG" alt="article">
+                <img src="../image/tree.JPG" alt="article">
             </div>
             <div class="home-article-content font1">
                 <span>Travel</span>
-                <a href="/html/blogpost1.html">
+                <a href="../html/blogpost1.html">
                     <h3>Beautiful Kyoto.</h3>
                 </a>
                 <div>Author Name</div>
@@ -95,11 +95,11 @@
         </div>
         <div class="home-article">
             <div class="home-article-img">
-                <img src="/image/ai.jpg" alt="article">
+                <img src="../image/ai.jpg" alt="article">
             </div>
             <div class="home-article-content font1">
                 <span>Technology Computers</span>
-                <a href="/html/blogpost1.html">
+                <a href="../html/blogpost1.html">
                     <h3>Features Of AI.</h3>
                 </a>
                 <div>Author Name</div>
