--- a/html/login.html
+++ b/html/login.html
@@ -10,8 +10,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login page</title>
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="/css/util.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/util.css">
     <style>
        .navigation{
             margin-top: 23px;
@@ -234,12 +234,12 @@
                 <li><a href="/html/index.htm">Home</a></li>
                 <li><a href="/html/blogpost1.html">Blog</a></li>
                 <!-- <li><a href="login.html">Create</li> -->
-                <li><a href="/html/contact.html">Contact</a></li>
-                <li><a href="/html/login.html">Login/signup</a></li>
+                <li><a href="../html/contact.html">Contact</a></li>
+                <li><a href=",,/html/login.html">Login/signup</a></li>
             </ul>
         </div>
         <div class="nav-right">
-            <form action="/html/search1.html" method="get">
+            <form action="../html/search1.html" method="get">
                 <input class="form-input" type="text" placeholder="Article Search">
                 <button class="btn">Search</button>
             </form>
